--- a/src/mlayer/app/fxml/MainWindow.fxml
+++ b/src/mlayer/app/fxml/MainWindow.fxml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mlayer.app.controllers.MainController">
-   <children>
-      <ImageView fx:id="imageView" pickOnBounds="true" preserveRatio="true" />
-   </children>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="mlayer.app.controllers.MainController">
+    <ImageView fx:id="imageView" pickOnBounds="true" preserveRatio="true"/>
+    <Text fx:id="lengthText" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Taki sobie text">
+        <font>
+          <Font size="25.0"/>
+        </font>
+    </Text>
+    <Button fx:id="playButton" layoutX="202.0" layoutY="76.0" mnemonicParsing="false" text="Button"/>
 </AnchorPane>
