--- a/src/mlayer/app/fxml/MainWindow.fxml
+++ b/src/mlayer/app/fxml/MainWindow.fxml
@@ -5,24 +5,21 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="mlayer.app.controllers.MainController">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mlayer.app.controllers.MainController">
    <BorderPane>
       <top>
          <MenuBar BorderPane.alignment="CENTER">
             <Menu mnemonicParsing="false" text="File">
-               <MenuItem fx:id="loadMenu" mnemonicParsing="false" onAction="#loadMenuOnAction" text="Load"/>
-               <MenuItem fx:id="loadDirectoryMenu" mnemonicParsing="false" onAction="#loadDirectoryMenuOnAction"
-                         text="Load directory"/>
-               <MenuItem fx:id="closeMenu" mnemonicParsing="false" onAction="#closeMenuAction" text="Close"/>
+               <MenuItem fx:id="loadMenu" mnemonicParsing="false" onAction="#loadMenuOnAction" text="Load" />
+               <MenuItem fx:id="loadDirectoryMenu" mnemonicParsing="false" onAction="#loadDirectoryMenuOnAction" text="Load directory" />
+               <MenuItem fx:id="closeMenu" mnemonicParsing="false" onAction="#closeMenuAction" text="Close" />
             </Menu>
             <Menu mnemonicParsing="false" text="Edit">
-               <MenuItem fx:id="deleteMenu" mnemonicParsing="false" onAction="#deleteMenuAction" text="Delete"/>
-               <MenuItem fx:id="clearListMenu" mnemonicParsing="false" onAction="#clearListMenuOnAction"
-                         text="Clear list"/>
+               <MenuItem fx:id="deleteMenu" mnemonicParsing="false" onAction="#deleteMenuAction" text="Delete" />
+               <MenuItem fx:id="clearListMenu" mnemonicParsing="false" onAction="#clearListMenuOnAction" text="Clear list" />
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
-               <MenuItem fx:id="aboutMenu" mnemonicParsing="false" onAction="#aboutMenuOnAction" text="About"/>
+               <MenuItem fx:id="aboutMenu" mnemonicParsing="false" onAction="#aboutMenuOnAction" text="About" />
             </Menu>
          </MenuBar>
       </top>
@@ -30,84 +27,59 @@
          <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
             <Text fx:id="titleText" strokeType="OUTSIDE" strokeWidth="0.0" text="Title" wrappingWidth="240.0">
                <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
             </Text>
-            <Separator prefWidth="200.0"/>
-            <ImageView fx:id="coverArtImageView" fitHeight="250.0" fitWidth="250.0" pickOnBounds="true"
-                       preserveRatio="true"/>
-            <Separator prefWidth="200.0"/>
+            <Separator prefWidth="200.0" />
+            <ImageView fx:id="coverArtImageView" fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" />
+            <Separator prefWidth="200.0" />
             <ProgressBar fx:id="timeBar" prefHeight="18.0" prefWidth="250.0" progress="0.0">
                <VBox.margin>
-                  <Insets/>
+                  <Insets />
                </VBox.margin>
                <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </ProgressBar>
-            <Separator prefWidth="250.0"/>
+            <Separator prefWidth="250.0" />
          </VBox>
       </center>
       <bottom>
          <HBox alignment="CENTER" prefHeight="45.0" BorderPane.alignment="CENTER">
-            <Button fx:id="muteButton" mnemonicParsing="false" onAction="#muteButtonOnAction" prefHeight="35.0"
-                    prefWidth="35.0" text="M" textAlignment="CENTER">
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-               </padding>
+            <Button fx:id="muteButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#muteButtonOnAction" prefHeight="35.0" prefWidth="35.0" textAlignment="CENTER">
                <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" top="5.0"/>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
             </Button>
             <Slider fx:id="volumeSlider" max="1.0" value="1.0">
                <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
             </Slider>
-            <Separator orientation="VERTICAL" prefHeight="200.0"/>
-            <Button fx:id="prevButton" alignment="CENTER" mnemonicParsing="false" onAction="#prevButtonOnAction"
-                    prefHeight="35.0" prefWidth="35.0" text="Prev" textAlignment="CENTER">
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-               </padding>
+            <Separator orientation="VERTICAL" prefHeight="200.0" />
+            <Button fx:id="prevButton" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#prevButtonOnAction" prefHeight="35.0" prefWidth="35.0" textAlignment="CENTER">
                <HBox.margin>
-                  <Insets bottom="5.0" left="15.0" right="15.0" top="5.0"/>
+                  <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="skipPrevButton" mnemonicParsing="false" onAction="#skipPrevButtonOnAction"
-                    prefHeight="35.0" prefWidth="35.0" text="S-5">
+            <Button fx:id="skipPrevButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#skipPrevButtonOnAction" prefHeight="35.0" prefWidth="35.0">
                <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-               </HBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-               </padding>
-            </Button>
-            <Button fx:id="playButton" alignment="CENTER" mnemonicParsing="false" onAction="#playButtonOnAction"
-                    prefHeight="35.0" prefWidth="35.0" text="Play" textAlignment="CENTER">
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-               </padding>
-               <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="skipNextButton" mnemonicParsing="false" onAction="#skipNextButtonOnAction"
-                    prefHeight="35.0" prefWidth="35.0" text="S+5">
+            <Button fx:id="playButton" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#playButtonOnAction" prefHeight="35.0" prefWidth="35.0" textAlignment="CENTER">
                <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </HBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-               </padding>
             </Button>
-            <Button fx:id="nextButton" alignment="CENTER" mnemonicParsing="false" onAction="#nextButtonOnAction"
-                    prefHeight="35.0" prefWidth="35.0" text="Next" textAlignment="CENTER">
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-               </padding>
+            <Button fx:id="skipNextButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#skipNextButtonOnAction" prefHeight="35.0" prefWidth="35.0">
                <HBox.margin>
-                  <Insets bottom="5.0" left="15.0" right="15.0" top="5.0"/>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="nextButton" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#nextButtonOnAction" prefHeight="35.0" prefWidth="35.0" textAlignment="CENTER">
+               <HBox.margin>
+                  <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
                </HBox.margin>
             </Button>
          </HBox>
@@ -115,11 +87,11 @@
       <left>
          <TableView fx:id="songsList" prefHeight="313.0" prefWidth="575.0" BorderPane.alignment="CENTER">
             <columns>
-               <TableColumn fx:id="nrColumn" prefWidth="45.0" text="#"/>
-               <TableColumn fx:id="nameColumn" prefWidth="164.0" text="Name"/>
-               <TableColumn fx:id="artistColumn" prefWidth="149.0" text="Artist"/>
-               <TableColumn fx:id="albumColumn" prefWidth="123.0" text="Album"/>
-               <TableColumn fx:id="durationColumn" minWidth="5.0" prefWidth="76.0" text="Duration"/>
+               <TableColumn fx:id="nrColumn" prefWidth="45.0" text="#" />
+               <TableColumn fx:id="nameColumn" prefWidth="164.0" text="Name" />
+               <TableColumn fx:id="artistColumn" prefWidth="149.0" text="Artist" />
+               <TableColumn fx:id="albumColumn" prefWidth="123.0" text="Album" />
+               <TableColumn fx:id="durationColumn" minWidth="5.0" prefWidth="76.0" text="Duration" />
             </columns>
          </TableView>
       </left>
