--- a/src/mlayer/app/fxml/MainWindow.fxml
+++ b/src/mlayer/app/fxml/MainWindow.fxml
@@ -82,6 +82,12 @@
                   <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
                </HBox.margin>
             </Button>
+            <Separator orientation="VERTICAL" prefHeight="200.0" />
+            <Button fx:id="loopButton" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#loopButtonOnAction" prefHeight="35.0" prefWidth="35.0" textAlignment="CENTER">
+               <HBox.margin>
+                  <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
+               </HBox.margin>
+            </Button>
          </HBox>
       </bottom>
       <left>
